# Easy-File-Sharing-Flask-API

./: .env.example  .flake8  .gitignore  .readthedocs.yaml  README.md  app.py  constants.py  manifest.json  passenger_wsgi.py  pyproject.toml  readme.md  requirements.txt  run-format.sh  run-lint-html.sh  run-markdownlint.sh  run-pylint.sh  service-worker.js
apt/: .gitignore
apt/project/: build.sh  setup.py
apt/utils/: control  copyright
cli_app/: cli_app.py  file_sharing_client.py  sharefile.py
cli_app/docs/: cli-app.md
docs/: api.md  cli-app.md  python-client.md  requirements.txt
docs/source/: conf.py  doc-api.rst  doc-cli-app.rst  doc-python-client.rst  index.rst  readme.rst
docs/source/flask_file_share/: flask_file_share.rst  flask_file_share.utils.rst  flask_file_share.web.rst  modules.rst
examples/data/: test_file1.txt  test_file2.txt
scripts/: run-app.sh  run-build-docu.sh  run-export-deps.sh  run-format-python.sh  run-format.sh  run-markdownlint.sh  run-pydeps.sh  run-pylint.sh
src/: app.py  constants.py  utils.py
src/filemanager/: app.py  cli.py  client.py  settings.py
src/filemanager/utils/: __init__.py  mimetype.py  slugify.py
src/filemanager/web/: auth.py  config.py  routes.py  utils.py  views.py
src/flask_file_share/: __init__.py  app.py  cli.py  client.py  main.py  settings.py
src/flask_file_share/utils/: mimetype.py  slugify.py  zip.py
src/flask_file_share/web/: auth.py  routes.py  utils.py  views.py
src/templates/: index.html  login.html
static/progress-bar/: index-download.js
templates/: index.html  login.html
