[tool.poetry]
name = "flask-file-share"
version = "0.1.0"
description = "Flask-based file sharing with web interface, API, and CLI app"
authors = ["hermann-web <hermannagossou6@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [
    {from = "src", include = "flask_file_share"}
]

[tool.poetry.dependencies]
python = "^3.8.1"
Flask = "^3.0.3"
python-dotenv = "^1.0.1"
python-slugify = "^8.0.4"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.9.0"

[tool.yapf]
based_on_style = "google"
column_limit = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
